Fix sticky table header z-index

--- a/src/table/index.scss
+++ b/src/table/index.scss
@@ -15,6 +15,7 @@
     position: sticky;
     top: 0;
     background-color: $body-bg;
+    z-index: 1;
   }
 
   // Needed for table head border styles to be sticky
